# Floresta

./: .gitignore  CONTRIBUTING.md  Cargo.toml  docker-compose.yml  flake.nix  justfile
.github/workflows/: rust.yml
crates/floresta/: Cargo.toml
crates/floresta-chain/: Cargo.toml
crates/floresta-chain/src/: extensions.rs
crates/floresta-chain/src/pruned_utreexo/: chain_state.rs  consensus.rs  mod.rs  partial_chain.rs
crates/floresta-common/: Cargo.toml
crates/floresta-common/src/: ema.rs  lib.rs
crates/floresta-electrum/: Cargo.toml
crates/floresta-electrum/src/: electrum_protocol.rs  error.rs
crates/floresta-mempool/: Cargo.toml
crates/floresta-mempool/src/: lib.rs  mempool.rs
crates/floresta-node/: Cargo.toml
crates/floresta-node/src/: florestad.rs
crates/floresta-node/src/json_rpc/: blockchain.rs  res.rs  server.rs
crates/floresta-rpc/src/: lib.rs  rpc.rs  rpc_types.rs
crates/floresta-wire/: Cargo.toml
crates/floresta-wire/src/p2p_wire/: block_proof.rs  node_context.rs  node_interface.rs  peer.rs
crates/floresta-wire/src/p2p_wire/node/: blocks.rs  chain_selector_ctx.rs  conn.rs  mod.rs  peer_man.rs  running_ctx.rs  sync_ctx.rs  user_req.rs
crates/floresta-wire/src/p2p_wire/tests/: utils.rs
crates/floresta/examples/: node.rs
doc/: docker.md
doc/rpc/: getblockchaininfo.md  getblockhash.md  getmemoryinfo.md  getrpcinfo.md  sendrawtransaction.md  stop.md
metrics/: Cargo.toml
metrics/grafana/: datasource.yml
metrics/grafana/dashboards/: floresta-dashboard.json
metrics/src/: lib.rs
tests/: run.sh  test_runner.py
tests/example/: bitcoin.py  electrum.py  functional.py  integration.py  utreexod.py
tests/floresta-cli/: addnode-v1.py  addnode-v2.py  disconnectnode.py  getbestblockhash.py  getblock.py  getblockchaininfo.py  getblockcount.py  getblockhash.py  getblockheader.py  getmemoryinfo.py  getpeerinfo.py  getroots.py  getrpcinfo.py  gettxout.py  ping.py  stop.py  uptime.py
tests/florestad/: connect.py  node-info.py  reorg-chain.py  restart.py  tls.py
tests/test_framework/: __init__.py  node.py  util.py
tests/test_framework/daemon/: base.py  bitcoin.py  floresta.py
tests/test_framework/electrum/: base.py
tests/test_framework/rpc/: base.py  bitcoin.py  floresta.py
