[package]
name = "metrics"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
prometheus-client = "0.22"
sysinfo = { version = "0.36", default-features = false, features = ["system"] }
tokio = { workspace = true }

[lints]
workspace = true
